[package]
name = "emergency_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.5"
piston_window = "0.121.0"
piston = "1.0.0"
eframe = "0.28.1"
rfd = "0.14.1"
walkdir = "2.5.0"
[lib]
name = "emergency_backup"
path = "src/lib.rs"