    [package]
    name = "emergency_backup"
    version = "0.1.0"
    edition = "2021"

[[bin]]
name = "main_app"
path = "src/main.rs"

[[bin]]
name = "initialize_app"
path = "src/initialize.rs"

[dependencies]
rdev = "0.5"
eframe = "0.28.1"
rfd = "0.14.1"
walkdir = "2.5.0"
device_query = "2.1.0"
chrono = "0.4.38"
ctrlc = "3.4.4"
fltk = "1.4.33"
serial_test = "3.1.1"
sysinfo = "0.30.13"
win-beep = "1.0.3"

[lib]
name = "emergency_backup"
path = "src/lib.rs"
