[package]
name = "emergency_backup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main_app"
path = "src/main.rs"

[[bin]]
name = "initialize_app"
path = "src/initialize.rs"

[[bin]]
name = "popup"
path = "src/util.rs"

[dependencies]
rdev = "0.5"
eframe = "0.28.1"
rfd = "0.14.1"
walkdir = "2.5.0"
device_query = "2.1.0"
chrono = "0.4.38"
ctrlc = "3.4.4"
serial_test = "3.1.1"
sysinfo = "0.30.13"
win-beep = "1.0.3"
winapi = { version = "0.3", features = ["winbase", "consoleapi", "winuser", "wincon"] }
tempfile = "3.12.0"
mockall = "0.13.0"

[lib]
name = "emergency_backup"
path = "src/lib.rs"
